# cannon-project

./: CHANGELOG.md  Cargo.toml  README.md  dashboard.html  install.sh  json.report  report.html  report.json  scenario_test.yml  test.csv
.github/workflows/: ci.yml  release.yml
src/: args.rs  engine.rs  lib.rs  main.rs  payload.rs  report.rs
src/args/: config.rs  parser.rs
src/client/: http.rs  mod.rs  target.rs
src/engine/: mod.rs  worker.rs
src/payload/: generator.rs
src/report/: cli.rs
src/security/: url_validator.rs
templates/: dashboard.html
