[package]
name = "cannon-project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.0", features = ["derive"] }
hdrhistogram = "7.5.4"
indicatif = "0.18.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.147"

colored = "3.0.0"
tabled = { version = "0.20.0", features = ["derive"] }
