[package]
name = "cannon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cannon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.5.60", features = ["derive"] }
hdrhistogram = "7.5.4"
indicatif = "0.18.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

colored = "3.1.1"
tabled = { version = "0.20.0", features = ["derive"] }


rand = "0.10.0"

uuid = { version = "1.21.0", features = ["v4"] }

self_update = { version = "0.42.0", default-features = false, features = ["archive-tar", "archive-zip", "rustls", "zip", "tar"] }