[package]
name = "cannon"
version = "2.0.5"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "cannon"
path = "src/main.rs"

[dependencies]
mimalloc = { version = "0.1", default-features = false }
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.6.1", features = ["derive"] }
hdrhistogram = "7.5.4"
indicatif = "0.18.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9"
csv = "1.3"

colored = "3.1.1"
tabled = { version = "0.21.0", features = ["derive"] }


async-channel = "2.3"

rand = "0.10.1"

uuid = { version = "1.23.3", features = ["v4"] }

self_update = { version = "0.42.0", default-features = false, features = ["archive-tar", "archive-zip", "rustls", "zip", "tar"] }
async-trait = "0.1.89"

